--- a/CRUD/MainWindow.xaml
+++ b/CRUD/MainWindow.xaml
@@ -4,9 +4,11 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CRUD"
+        xmlns:views="clr-namespace:CRUD.Views"
         mc:Ignorable="d"
         Title="CRUD" Height="450" Width="800">
     <Grid>
-
+        <!--<views:MainPageView/>-->
+        <views:MakeReservationView/>
     </Grid>
 </Window>
