--- a/CRUD/App.xaml
+++ b/CRUD/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="CRUD.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:CRUD"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:CRUD">
     <Application.Resources>
          
     </Application.Resources>
