--- a/CRUD/Views/MakeReservationView.xaml
+++ b/CRUD/Views/MakeReservationView.xaml
@@ -6,6 +6,7 @@
              xmlns:local="clr-namespace:CRUD.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="3*"/>
@@ -34,17 +35,34 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        
-        <ListView x:Name="seatsListView" Grid.Row="1">
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn/>
-                </GridView>
-            </ListView.View>
+
+        <ListView Grid.Row="1" Name="seatsListView" ItemsSource="{Binding AvailableSeats}" SelectedIndex="{Binding SeatIndex}">
+            <ListView.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <StackPanel Orientation="Horizontal"></StackPanel>
+                </ItemsPanelTemplate>
+            </ListView.ItemsPanel>
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                            </Grid.RowDefinitions>
+                            <Rectangle Grid.Row="0" Fill="#FF5192A0" MinWidth="70" MinHeight="50"/>
+                            <TextBlock Text="{Binding SeatNumber}" TextAlignment="Center" Margin="0 10 0 0"/>
+                            <TextBlock Text="{Binding Available}" TextAlignment="Center" Margin="0 25 0 0"/>
+                        </Grid>
+                    </StackPanel>
+                </DataTemplate>
+            </ListView.ItemTemplate>
         </ListView>
+
         <StackPanel Grid.Row="2" HorizontalAlignment="Stretch">
             <Button Command="{Binding SubmitCommand}" x:Name="submitButton" Content="Submit" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="0,3,0,0" />
-            <Button Command="{Binding CancelCommand}" x:Name="cancelButton" Content="Cancel" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,3,0,0"/>
+            <!--<Button Command="{Binding CancelCommand}" x:Name="cancelButton" Content="Cancel" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,3,0,0"/>-->
         </StackPanel>
     </Grid>
 </UserControl>
