--- a/CRUD/Views/MakeReservationView.xaml
+++ b/CRUD/Views/MakeReservationView.xaml
@@ -29,7 +29,9 @@
                                 <RowDefinition/>
                             </Grid.RowDefinitions>
                             <Rectangle Grid.Row="0" Fill="#FF5192A0" MinWidth="140" MinHeight="100"/>
-                            <TextBlock Text="{Binding SeanceID}" TextAlignment="Center" Margin="0 10 0 0"/>
+                            <TextBlock Text="{Binding MovieName}" TextAlignment="Center" Margin="0 15 0 0"/>
+                            <TextBlock Text="{Binding StartTime}" TextAlignment="Center" Margin="0 30 0 0"/>
+                            <TextBlock Text="{Binding HallNumber}" TextAlignment="Center" Margin="0 45 0 0"/>
                         </Grid>
                     </StackPanel>
                 </DataTemplate>
