--- a/CRUD/MainWindow.xaml
+++ b/CRUD/MainWindow.xaml
@@ -13,7 +13,7 @@
             <DataTemplate DataType="{x:Type vms:MakeReservationViewModel}">
                 <views:MakeReservationView />
             </DataTemplate>
-            <DataTemplate DataType="{x:Type vms:MainViewModel}">
+            <DataTemplate DataType="{x:Type vms:LoginViewModel}">
                 <views:MainPageView />
             </DataTemplate>
         </Grid.Resources>
