--- a/CRUD/Views/MainPageView.xaml
+++ b/CRUD/Views/MainPageView.xaml
@@ -7,6 +7,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-            
+        <Button Command="{Binding MakeReservationCommand}" Width="200" Height="40" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Login"/>
     </Grid>
 </UserControl>
